@@ -3,6 +3,7 @@ try:
 except ImportError:
     from urlparse import urlparse, parse_qs
 import warnings
+import json
 
 from django.test.utils import override_settings
 from django.test import TestCase
@@ -82,12 +83,14 @@ def create_oauth2_tests(provider):
     def get_mocked_response(self):
         pass
 
-    def get_login_response_json(self):
-        return ('{'
-            '"uid":"weibo", '
-            '"access_token":"testac", '
-            '"refresh_token":"testrf"'
-        '}')
+    def get_login_response_json(self, with_refresh_token=True):
+        rt = ''
+        if with_refresh_token:
+            rt = ',"refresh_token": "testrf"'
+        return """{
+            "uid":"weibo",
+            "access_token":"testac"
+            %s }""" % rt
 
     def setUp(self):
         app = SocialApp.objects.create(provider=provider.id,
@@ -121,22 +124,19 @@ def create_oauth2_tests(provider):
                           password='test')
         self.login(self.get_mocked_response(), process='connect')
         if multiple_login:
-            glr = self.get_login_response_json
-            self.get_login_response_json = (
-                lambda *args: '{"uid":"weibo","access_token":"testac"}')
-            try:
-                self.login(
-                    self.get_mocked_response(),
-                    process='connect')
-            finally:
-                self.get_login_response_json = glr
+            self.login(
+                self.get_mocked_response(),
+                with_refresh_token=False,
+                process='connect')
         # get account
-        sa = SocialAccount.objects.filter(user=user, provider=self.provider.id).get()
+        sa = SocialAccount.objects.filter(user=user,
+                                          provider=self.provider.id).get()
         # get token
         t = sa.socialtoken_set.get()
         # verify access_token and refresh_token
         self.assertEqual('testac', t.token)
-        self.assertEqual('testrf', t.token_secret)
+        self.assertEqual(t.token_secret,
+                         json.loads(self.get_login_response_json(with_refresh_token=True)).get('refresh_token', ''))
 
     def test_account_refresh_token_saved_next_login(self):
         '''
@@ -146,7 +146,8 @@ def create_oauth2_tests(provider):
         '''
         self.test_account_tokens(multiple_login=True)
 
-    def login(self, resp_mock, process='login'):
+    def login(self, resp_mock, process='login',
+              with_refresh_token=True):
         resp = self.client.get(reverse(self.provider.id + '_login'),
                                dict(process=process))
         p = urlparse(resp['location'])
@@ -154,7 +155,8 @@ def create_oauth2_tests(provider):
         complete_url = reverse(self.provider.id+'_callback')
         self.assertGreater(q['redirect_uri'][0]
                            .find(complete_url), 0)
-        response_json = self.get_login_response_json()
+        response_json = self \
+            .get_login_response_json(with_refresh_token=with_refresh_token)
         with mocked_response(
                 MockedResponse(
                     200,
@@ -162,20 +164,17 @@ def create_oauth2_tests(provider):
                     {'content-type': 'application/json'}),
                 resp_mock):
             resp = self.client.get(complete_url,
-                                   { 'code': 'test',
-                                     'state': q['state'][0] })
+                                   {'code': 'test',
+                                    'state': q['state'][0]})
         return resp
 
-
-
-
-    impl = { 'setUp': setUp,
-             'login': login,
-             'test_login': test_login,
-             'test_account_tokens': test_account_tokens,
-             'test_account_refresh_token_saved_next_login': test_account_refresh_token_saved_next_login,
-             'get_login_response_json': get_login_response_json,
-             'get_mocked_response': get_mocked_response }
+    impl = {'setUp': setUp,
+            'login': login,
+            'test_login': test_login,
+            'test_account_tokens': test_account_tokens,
+            'test_account_refresh_token_saved_next_login': test_account_refresh_token_saved_next_login,
+            'get_login_response_json': get_login_response_json,
+            'get_mocked_response': get_mocked_response}
     class_name = 'OAuth2Tests_'+provider.id
     Class = type(class_name, (TestCase,), impl)
     Class.provider = provider
