@@ -1,3 +1,7 @@
+2013-08-29  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Added VK provider support.
+
 2013-07-23  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* All views are now class-based.
